--- a/front-service/views/createItem.ejs
+++ b/front-service/views/createItem.ejs
@@ -47,5 +47,5 @@
 </div>
 
 </body>
-<script type="module" src="service/create/createButtonEvent.js"></script>
+<script type="module" src="../dist/createButtonEvent.bundle.js"></script>
 </html>
