--- a/front-service/views/index.ejs
+++ b/front-service/views/index.ejs
@@ -20,5 +20,5 @@
 </div>
 
 </body>
-<script type="module" src="service/index/socket.js"></script>
+<script src="../dist/socket.bundle.js"></script>
 </html>
