--- a/front-service/views/readItem.ejs
+++ b/front-service/views/readItem.ejs
@@ -35,5 +35,5 @@
 </div>
 
 </body>
-<script type="module" src="service/read/readBuilder.js"></script>
+<script type="module" src="../dist/readBuilder.bundle.js"></script>
 </html>
