--- a/front-service/views/updateItem.ejs
+++ b/front-service/views/updateItem.ejs
@@ -46,5 +46,5 @@
 </div>
 
 </body>
-<script type="module" src="service/update/updateButtonEvent.js"></script>
+<script type="module" src="../dist/updateButtonEvent.bundle.js"></script>
 </html>
