--- a/front-service/views/createItem.ejs
+++ b/front-service/views/createItem.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="/css/addItem.css" rel="stylesheet" />
+    <link href="/css/styles.css" rel="stylesheet" />
     
 </head>
 <body>
@@ -28,21 +28,38 @@
       <input id="description" type="text">
     </form>
 
+    <a>Полное описание:</a>
+    <form>
+      <input id="fullDescription" type="text">
+    </form>
+
     <a>Цена:</a>
     <form>
       <input id="price" type="text">
     </form>
 
-    <a>Категория:</a>
+    <a>Ссылка на изображение:</a>
     <form>
-      <input id="category" type="text">
+      <input id="linkImage" type="text">
     </form>
 
+    <a>Номер телефона для связи:</a>
+    <form>
+      <input id="phoneNumber" type="text">
+    </form>
+
+    <a>email для связи:</a>
+    <form>
+      <input id="email" type="text">
+    </form>
+
+    <div class="sendButtonContainer">
+      <a id="button" href="/">Создать объявление</a>
+    </div>
+
   </div>
 
-  <div class="sendButtonContainer">
-    <input id="sendButton" type="submit" value="Создать объявление" />
-  </div>
+  
 
 </div>
 
