--- a/front-service/views/readItem.ejs
+++ b/front-service/views/readItem.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="/css/readItem.css" rel="stylesheet" />
+    <link href="/css/styles.css" rel="stylesheet" />
     
 </head>
 <body>
@@ -24,11 +24,25 @@
     <a>Описание:</a>
     <a id="description"></a>
 
+    <a>Полное описание:</a>
+    <a id="fullDescription"></a>
+
     <a>Цена:</a>
     <a id="price"></a>
 
-    <a>Категория:</a>
-    <a id="category"></a>
+    <a>Изображение:</a>
+    <img id="itemImage" style="height: 600px;"/>
+
+    <a>Ссылка на изображение:</a>
+    <a id="linkImage"></a>
+
+    <a>Номер телефона для связи:</a>
+    <a id="phoneNumber"></a>
+
+    <a>email для связи:</a>
+    <a id="email"></a>
+
+
 
   </div>
 
