--- a/front-service/views/updateItem.ejs
+++ b/front-service/views/updateItem.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="/css/modifyItem.css" rel="stylesheet" />
+    <link href="/css/styles.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -27,21 +27,43 @@
       <input id="description" type="text">
     </form>
 
+    <a>Полное описание:</a>
+    <form>
+      <input id="fullDescription" type="text">
+    </form>
+
     <a>Цена:</a>
     <form>
       <input id="price" type="text">
     </form>
 
-    <a>Категория:</a>
+    <a>Изображение:</a>
     <form>
-      <input id="category" type="text">
+      <img id="itemPhoto" style="height: 600px;"/>
     </form>
 
+    <a>Ссылка на изображение:</a>
+    <form>
+      <input id="linkImage" type="text">
+    </form>
+
+    <a>Номер телефона для связи:</a>
+    <form>
+      <input id="phoneNumber" type="text">
+    </form>
+
+    <a>email для связи:</a>
+    <form>
+      <input id="email" type="text">
+    </form>
+
+    <div class="sendButtonContainer">
+      <a id="button" href="/">Изменить объявление</a>
+    </div>
+    
   </div>
 
-  <div class="sendButtonContainer">
-    <input id="updateButton" type="submit" value="Изменить объявление" />
-  </div>
+  
 
 </div>
 
